--- a/index.html
+++ b/index.html
@@ -2,8 +2,38 @@
 <html>
   <head>
     <title>Mild High Club</title>
+    <link rel="stylesheet" href="./assets/stylesheets/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Khula" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
   </head>
+
   <body>
-    <h1>Hello World!</h1>
+
+    <div class=header>
+      MILD HIGH CLUB
+    </div>
+
+  <div class=nav>
+    <nav>
+      <h2>
+          <a href ="/">HOME</a>
+          <a href ="about.html">ABOUT</a>
+          <a href ="discography.html">DISCOGRAPHY</a>
+          <a href="media.html">MEDIA</a>
+          <a href="merch.html">MERCH</a>
+          <a href="tour-dates.html">TOUR DATES</a>
+      </h2>
+    </nav>
+  </div>
+
+  <div id=logo>
+    <img src="./assets/images/mhc_logo.png">
+  </div>
+
+
+   <video autoplay muted loop id="myVideo">
+      <source src="assets/images/background_video.mp4" type="video/mp4"
+    </video>
+
   </body>
 </html>
