--- a/discography.html
+++ b/discography.html
@@ -8,29 +8,42 @@
   </head>
 
   <body>
+    <a href="index.html">
+      <h1 class=header-text>MILD HIGH CLUB</h1>
+    </a>
 
-    <div class=header>
-      MILD HIGH CLUB
-    </div>
+      <div class=social>
+        <a href="https://twitter.com/mildhighclub?lang=en" id=twitter>
+          <img src="./assets/images/twitter.png" height="35" width="35">
+        </a>
+        <a href="https://www.facebook.com/themildhighclub/" id=facebook>
+          <img src="./assets/images/facebook.png" height="35" width="35">
+        </a>
+        <a href="https://www.instagram.com/mildhighclub/?hl=en" id=instagram>
+          <img src="./assets/images/instagram.png" height="35" width="35">
+        </a>
+      </div>
 
-  <div class=nav>
-    <nav>
-      <h2>
-          <a href ="/">HOME</a>
-          <a href ="about.html">ABOUT</a>
-          <a href ="discography.html">DISCOGRAPHY</a>
-          <a href="media.html">MEDIA</a>
-          <a href="merch.html">MERCH</a>
-          <a href="tour-dates.html">TOUR DATES</a>
-      </h2>
-    </nav>
-  </div>
+      <div class=header></div>
+
+      <div class=nav>
+        <nav>
+          <h2>
+            <a href ="/">HOME</a>
+            <a href ="about.html">ABOUT</a>
+            <a href ="discography.html">DISCOGRAPHY</a>
+            <a href="media.html">MEDIA</a>
+            <a href="merch.html">MERCH</a>
+            <a href="tour-dates.html">TOUR DATES</a>
+          </h2>
+        </nav>
+      </div>
 
 <div id=discography>
     DISCOGRAPHY
 </div>
 
-<!-- flip tile section -->
+<!-- flip tile section
 <div class="flip-card" id=album1>
   <div class="flip-card-inner">
     <div class="flip-card-front">
@@ -63,9 +76,104 @@
 </div>
 </div>
 
+ end flip tile section -->
+<div class="row">
+  <div class="column left">
+    <div class="flip-card" id=album1>
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="assets/images/album1.jpg" alt="Skiptracing" style="width:300px;height:300px;">
+        </div>
+        <div class="flip-card-back">
+        <iframe src="https://open.spotify.com/embed/artist/5J81VungUjSVHxlPpTI9KG" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="column right">
+    <h5 id=skiptracing>SKIPTRACING</h5>
+    <p id=skiptracing>rock-funk | soul-pop</p>
+    <p id=skiptracing>11 songs | 30 minutes | 2016</p>
+      <ol id=skip>
+        <li>Skiptracing.............................................3:39</li>
+        <li>Homage..................................................2:57</li>
+        <li>Carry Me Back.........................................3:53</li>
+        <li>Tesselation.............................................2:32</li>
+        <li>Head Out................................................2:28</li>
+        <li>Kokopelli................................................2:55</li>
+        <li>?Whodunit?.............................................2:09</li>
+        <li>Chasing My Tail.......................................4:06</li>
+        <li>Ceiling Zero............................................0:37</li>
+        <li>Chapel Perilous.......................................4:32</li>
+        <li>Skiptracing (Reprise)...............................0:33</li>
+      </ol>
+  </div>
+</div>
 
-<!-- end flip tile section -->
+<div class="row">
+  <div class="column left">
+    <div class="flip-card" id=album2>
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="assets/images/album2.jpg" alt="Skiptracing" style="width:300px;height:300px;">
+        </div>
+        <div class="flip-card-back">
+        <iframe src="https://open.spotify.com/embed/album/5ufzqDK2p7Te64hQBAu35t" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="column right">
+    <h5 id=skiptracing>TIMELINE</h5>
+    <p id=skiptracing>alternative-indie rock | neo-psychedelia</p>
+    <p id=skiptracing>10 songs | 29 minutes | 2015</p>
+      <ol id=skip>
+        <li>Club Intro...............................................3:05</li>
+        <li>Windowpane............................................3:57</li>
+        <li>Note to Self.............................................2:20</li>
+        <li>You and Me..............................................3:28</li>
+        <li>Undeniable..............................................2:23</li>
+        <li>Timeline..................................................3:38</li>
+        <li>Rollercoaster Baby....................................2:09</li>
+        <li>Elegy.......................................................2:51</li>
+        <li>Weeping Willow........................................2:15</li>
+        <li>The Chat..................................................2:40</li>
+      </ol>
+  </div>
+</div>
+
+<div class="row">
+  <div class="column left">
+    <div class="flip-card" id=album3>
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="assets/images/album3.jpg" alt="Skiptracing" style="width:300px;height:300px;">
+        </div>
+        <div class="flip-card-back">
+      <iframe src="https://open.spotify.com/embed/album/61qF9TudqPlxy4a7u8xXrv" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="column right">
+    <h5 id=skiptracing>SKETCHES OF BRUNSWICK EAST</h5>
+    <p id=skiptracing>alternative-indie rock | neo-psychedelia - neo-prog</p>
+    <p id=skiptracing>13 songs | 37 minutes | 2017</p>
+      <ol id=skip>
+        <li>Skethces of Brunswick East I......................1:20</li>
+        <li>Countdown...............................................3:22</li>
+        <li>D-Day......................................................1:39</li>
+        <li>Tezeta.....................................................3:30</li>
+        <li>Cranes, Planes and Migraines.....................1:15</li>
+        <li>The Spider and Me....................................3:16</li>
+        <li>Sketches of Brunswick East II.....................3:25</li>
+        <li>Dusk to Dawn on Lygon Street....................3:03</li>
+        <li>The Book..................................................4:59</li>
+        <li>A Journey on (S)Hell..................................2:16</li>
+        <li>Rolling Stoned..........................................3:18</li>
+      </ol>
+  </div>
+</div>
 
   </body>
-
 </html>
