--- a/media.html
+++ b/media.html
@@ -1,1 +1,116 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/n7SJM6o-RJ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Mild High Club</title>
+    <link rel="stylesheet" href="./assets/stylesheets/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Khula" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <a href="index.html">
+      <h1 class=header-text>MILD HIGH CLUB</h1>
+    </a>
+
+      <div class=social>
+        <a href="https://twitter.com/mildhighclub?lang=en" id=twitter>
+          <img src="./assets/images/twitter.png" height="35" width="35">
+        </a>
+        <a href="https://www.facebook.com/themildhighclub/" id=facebook>
+          <img src="./assets/images/facebook.png" height="35" width="35">
+        </a>
+        <a href="https://www.instagram.com/mildhighclub/?hl=en" id=instagram>
+          <img src="./assets/images/instagram.png" height="35" width="35">
+        </a>
+      </div>
+
+      <div class=header></div>
+
+      <div class=nav>
+        <nav>
+          <h2>
+            <a href ="/">HOME</a>
+            <a href ="about.html">ABOUT</a>
+            <a href ="discography.html">DISCOGRAPHY</a>
+            <a href="media.html">MEDIA</a>
+            <a href="merch.html">MERCH</a>
+            <a href="tour-dates.html">TOUR DATES</a>
+          </h2>
+        </nav>
+      </div>
+
+<img class=media-hero src="./assets/images/mhc-media-hero.jpg" />
+<img class=media-logo src="./assets/images/mhc_logo.png" />
+
+<div class=media-header>
+  <h4>MEDIA</h4>
+</div>
+
+<div class=thumbnail>
+  <div id=row1>
+    <a id=thumbnail-spacing href="./assets/images/mhc_6.jpg" data-lightbox="image-1">
+      <img src="./assets/images/mhc_6_thumbnail.png"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhcabout.png" data-lightbox="image-1">
+      <img src="./assets/images/mhcabout_thumbnail.png"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc_3.jpg" data-lightbox="image-1">
+      <img src="./assets/images/mhc_3_thumbnail.jpg"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc_2.jpg" data-lightbox="image-1">
+      <img src="./assets/images/mhc_2_thumbnail.jpg"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc_10.jpg" data-lightbox="image-1">
+      <img src="./assets/images/mhc_10_thumbnail.jpg"/>
+    </a>
+  </div>
+  <div id=row2>
+    <a id=thumbnail-spacing href="./assets/images/mhc_9.jpg" data-lightbox="image-1">
+  <img src="./assets/images/mhc_9_thumbnail.jpg"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc_kgwl.jpg" data-lightbox="image-1">
+  <img src="./assets/images/mhc_kgwl_thumbnail.jpg"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc_4.jpg" data-lightbox="image-1">
+  <img src="./assets/images/mhc_4_thumbnail.jpg"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc_merch.png" data-lightbox="image-1">
+  <img src="./assets/images/mhc_merch_thumbnail.png"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc_5.jpg" data-lightbox="image-1">
+  <img src="./assets/images/mhc_5_thumbail.jpg"/>
+    </a>
+  </div>
+    <a id=thumbnail-spacing href="./assets/images/mhc7.jpg" data-lightbox="image-1">
+  <img src="./assets/images/mhc7_thumbnail.jpg"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc8.jpg" data-lightbox="image-1">
+  <img src="./assets/images/mhc8_thumbnail.png"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc_14.jpg" data-lightbox="image-1">
+      <img src="./assets/images/mhc_14_thumbnail.jpg"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc_15.jpg" data-lightbox="image-1">
+      <img src="./assets/images/mhc_15_thumbail.jpg"/>
+    </a>
+    <a id=thumbnail-spacing href="./assets/images/mhc11.jpg" data-lightbox="image-1">
+      <img src="./assets/images/mhc11_thumbnail.jpg"/>
+    </a>
+</div>
+
+<div class=youtube>
+  <div id=youtube-row-1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/n7SJM6o-RJ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/H13tgwE4VUw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div id=youtube-row-2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/jEX0r9cs5_0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/M5sNpJgpZkU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
+
+<script src="./assets/javascripts/jquery.js"></script>
+<script src="./assets/javascripts/lightbox.min.js"></script>
+  </body>
+</html>
