--- a/about.html
+++ b/about.html
@@ -8,55 +8,81 @@
   </head>
 
   <body>
+    <a href="index.html">
+      <h1 class=header-text>MILD HIGH CLUB</h1>
+    </a>
 
-    <div class=header>
-      MILD HIGH CLUB
-    </div>
+      <div class=social>
+        <a href="https://twitter.com/mildhighclub?lang=en" id=twitter>
+          <img src="./assets/images/twitter.png" height="35" width="35">
+        </a>
+        <a href="https://www.facebook.com/themildhighclub/" id=facebook>
+          <img src="./assets/images/facebook.png" height="35" width="35">
+        </a>
+        <a href="https://www.instagram.com/mildhighclub/?hl=en" id=instagram>
+          <img src="./assets/images/instagram.png" height="35" width="35">
+        </a>
+      </div>
 
-    <div class=nav>
-      <nav>
-        <h2>
-          <a href ="/">HOME</a>
-          <a href ="about.html">ABOUT</a>
-          <a href ="discography.html">DISCOGRAPHY</a>
-          <a href="media.html">MEDIA</a>
-          <a href="merch.html">MERCH</a>
-          <a href="tour-dates.html">TOUR DATES</a>
-        </h2>
-      </nav>
-    </div>
+      <div class=header></div>
+
+      <div class=nav>
+        <nav>
+          <h2>
+            <a href ="/">HOME</a>
+            <a href ="about.html">ABOUT</a>
+            <a href ="discography.html">DISCOGRAPHY</a>
+            <a href="media.html">MEDIA</a>
+            <a href="merch.html">MERCH</a>
+            <a href="tour-dates.html">TOUR DATES</a>
+          </h2>
+        </nav>
+      </div>
+
+<img id=about-pic src="./assets/images/mhc_14.jpg">
 
   <div id=aboutlogo>
     <img src="./assets/images/mhc_logo.png">
   </div>
 
   <div id=about-header>
-    ABOUT
+    <h4>ABOUT</h4>
   </div>
 
-    <img id=about-pic src="./assets/images/mhcabout.png">
+
 
   <div id=subhead>
     <h3>ABOUT</h3>
   </div>
 
-      <p>
+      <p id=sub>
         The Mild High Club is a psychedelic pop group helmed by Alexander Brettin, a Los Angeles-based musician who originally hailed from Chicago. The group's sound is pleasantly woozy and laid-back, but shows a subtle attention to detail without being excessive or indulgent. Brettin began working on Mild High Club material in 2012 by himself, using guitars, keyboards, computers, and a four-track recorder, and shuttling between Chicago, Baltimore, and Los Angeles. Along the way, he met several musicians across the nation who contributed to his album and backed him up during live gigs.
       </p>
-      <p>
+      <p id=sub>
         Mild High Club signed to Stones Throw at the end of 2014, and a 7" single, "Windowpane," was released in early 2015. The group's debut album, Timeline, appeared later in the year on the label's newly formed Circle Star Records imprint. A year later, Stones Throw released the group's more ambitious sophomore full-length, Skiptracing, then in the early months of 2017 Brettin collaborated with Australian psychedelic seekers King Gizzard & the Lizard Wizard on an album. He traveled to their Flightless HQ studios in East Brunswick, Melbourne, Australia, where he and Stu Mackenzie figured out some rough ideas. The duo was then joined by the rest of the band to fill those ideas in. Titled Sketches of Brunswick East, the album was a mix of soft rock, psych-pop, and cosmic jazz. It was released by ATO in mid-2017.
       </p>
 
-  <div id=subhead>
+  <div id=band>
      <h3>BAND MEMBERS</h3>
+     <ul id=list>
+      <li>Alexander Brettin</li>
+      <li>Band Members</li>
+      <li>Are Always</li>
+      <li>Changing</li>
+      <li>Alexander Brettin</li>
+    </ul>
   </div>
 
-       <ul>
-        <li>Alexander Brettin</li>
-        <li>filler name</li>
-        <li>filler name</li>
-        <li>filler name</li>
-        <li>filler name</li>
+    <div id=associated-acts>
+      <h3>ASSOCIATED ACTS</h3>
+       <ul id=acts>
+        <li>King Gizzard and the Lizard Wizard</li>
+        <li>Mac DeMarco</li>
+        <li>Ariel Pink</li>
+        <li>Youth Lagoon</li>
+        <li>Wire</li>
       </ul>
+    </div>
+
   </body>
 </html>
