--- a/index.html
+++ b/index.html
@@ -8,23 +8,36 @@
   </head>
 
   <body>
+  <a href="index.html">
+    <h1 class=header-text>MILD HIGH CLUB</h1>
+  </a>
 
-    <div class=header>
-      MILD HIGH CLUB
+    <div class=social>
+      <a href="https://twitter.com/mildhighclub?lang=en" id=twitter>
+        <img src="./assets/images/twitter.png" height="35" width="35">
+      </a>
+      <a href="https://www.facebook.com/themildhighclub/" id=facebook>
+        <img src="./assets/images/facebook.png" height="35" width="35">
+      </a>
+      <a href="https://www.instagram.com/mildhighclub/?hl=en" id=instagram>
+        <img src="./assets/images/instagram.png" height="35" width="35">
+      </a>
     </div>
 
-  <div class=nav>
-    <nav>
-      <h2>
+    <div class=header></div>
+
+    <div class=nav>
+      <nav>
+        <h2>
           <a href ="/">HOME</a>
           <a href ="about.html">ABOUT</a>
           <a href ="discography.html">DISCOGRAPHY</a>
           <a href="media.html">MEDIA</a>
           <a href="merch.html">MERCH</a>
           <a href="tour-dates.html">TOUR DATES</a>
-      </h2>
-    </nav>
-  </div>
+        </h2>
+      </nav>
+    </div>
 
   <div id=logo>
     <img src="./assets/images/mhc_logo.png">
@@ -32,8 +45,7 @@
 
 
    <video autoplay muted loop id="myVideo">
-      <source src="assets/images/background_video.mp4" type="video/mp4"
-    </video>
-
+      <source src="./assets/videos/mhc-vid.mp4" type="video/mp4"
+   </video>
   </body>
 </html>
